# arena

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  railway.toml
.github/workflows/: ci.yml  publish-rs.yml  publish.yml
data/: btcusd_book.jsonl  btcusd_l3_sample.jsonl  sample_btcusdt_book.jsonl
deploy/: DEPLOY.md  Dockerfile  docker-compose.yml  fetch_crypto_data.py  fetch_crypto_l3.py  fetch_crypto_orderbook.py  load_test.py  make_sample_book.py  mbo_demo.py  railway.toml
examples/: README.md  arena_demo.py  market_maker.py
rust/: Cargo.toml  README.md  pyproject.toml
rust/src/: lib.rs
src/convexpi/arena/: __init__.py  agents.py  client.py  crypto_book_replay.py  crypto_l3_replay.py  crypto_replay.py  engine.py  market.py  mbo.py  risk.py  server.py  viz.py
tests/arena/: test_agents.py  test_crypto_book_replay.py  test_crypto_replay.py  test_engine.py  test_fees_telemetry.py  test_fundamental_garch.py  test_l3_replay.py  test_market.py  test_mbo.py  test_risk.py  test_rust_conformance.py
