[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "convexpi-arena"
version = "0.3.0"
description = "ConvexPi Arena — discrete-time limit-order-book exchange simulator"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["finance", "trading", "limit-order-book", "market-microstructure", "simulation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "numpy>=1.24",
    "websockets>=12.0",
    "rich>=13.0",
    "finmlsim>=0.4",   # optional realistic fundamental process (GARCH clustering)
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "hatch",
]

[project.scripts]
convexpi-server = "convexpi.arena.server:main"
convexpi-viz    = "convexpi.arena.viz:main"

[project.urls]
Homepage      = "https://convexpi.ai"
Repository    = "https://github.com/convexpi/arena"
Documentation = "https://convexpi.ai/docs"
"Bug Tracker" = "https://github.com/convexpi/arena/issues"

[tool.hatch.build.targets.wheel]
# namespace package: convexpi/ has no __init__.py; arena/ is the real package
packages = ["src/convexpi/arena"]

[tool.hatch.build.targets.wheel.sources]
"src/convexpi/arena" = "convexpi/arena"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
