[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "convexpi-arena-rs"
version = "0.1.0"
description = "Rust-accelerated L3 (market-by-order) core for convexpi-arena"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

[tool.maturin]
module-name = "convexpi_arena_rs"
